--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,5 +11,9 @@
   },
   "devDependencies": {
     "vite": "^5.4.1"
-  }
+  },
+  "dependencies": {
+    "prettier": "^2.8.8"
+  },
+  "author": "Oleksandr Chekrenov"
 }
