--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/photo-stuiod-pet/",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "glob": "^8.1.0"
+
   },
   "dependencies": {
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "vite-plugin-full-reload": "^1.0.5",
+    "vite-plugin-html-inject": "^1.0.1"
   },
   "author": "Oleksandr Chekrenov"
 }
