--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.1",
-    "glob": "^8.1.0"
-
+    "glob": "^8.1.0",
+    "vite": "^5.4.1"
   },
   "dependencies": {
     "prettier": "^2.8.8",
