--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "body-scroll-lock": "^4.0.0-beta.0",
     "prettier": "^2.8.8",
     "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-html-inject": "^1.0.1"
